# VoteCin

./: .gitignore  CMakeLists.txt  README.md  candidatos.txt  eleitores.txt  index.html  main.cpp
forms/: mainwindow.ui
include/: Candidato.h  Eleicao.h  Eleitor.h  GerenciadorDados.h  Participante.h  Pessoa.h  Relatorio.h  SistemaVotacao.h  Urna.h  Votacao.h  Votante.h  Voto.h  mainwindow.h
include/core/: GerenciadorVotacoes.h  Relatorio.h  Urna.h  Votacao.h
include/data/: GerenciadorDados.h
include/models/: Opcao.h  Voto.h
include/ui/: Tela.h  TelaAdmin.h  TelaPrincipal.h  TelaVotacao.h  UtilsUI.h
resources/: opcoes_filmes.txt  opcoes_jogos.txt  opcoes_vazia.txt  opcoes_viagem.txt  votantes.txt
src/: Candidato.cpp  Eleicao.cpp  Eleitor.cpp  GerenciadorDados.cpp  Pessoa.cpp  Relatorio.cpp  SistemaVotacao.cpp  Urna.cpp  main.cpp  mainwindow.cpp
src/core/: GerenciadorVotacoes.cpp  Relatorio.cpp  Urna.cpp  Votacao.cpp
src/data/: GerenciadorDados.cpp
src/models/: Opcao.cpp  Participante.cpp  Votante.cpp
src/ui/: TelaAdmin.cpp  TelaPrincipal.cpp  TelaVotacao.cpp  UtilsUI.cpp
